@@ -1,25 +1,23 @@
 package com.service;
 
-import java.util.List;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
-import com.dao.ServiceRecordDao;
 import com.dao.ShoppingGuideDao;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.stereotype.Service;
+
 import com.entity.ShoppingGuide;
 import com.util.Pageh;
 
 @Service
 public class ShoppingGuideService {
 	@Autowired
-	private ShoppingGuideDao shoppingGuideDao;
-	@Autowired
-	private ServiceRecordDao serviceRecordDao;
+	private ShoppingGuideDao shopp;
 
 	public void add(ShoppingGuide shoppingGuide) {
-		shoppingGuideDao.add(shoppingGuide);
+		shopp.save(shoppingGuide);
 	}
 
 	/**
@@ -29,9 +27,8 @@ public class ShoppingGuideService {
 	 */
 
 	public void delete(String id) {
-		Integer code = new Integer(id);
-		serviceRecordDao.delete(code);
-		shoppingGuideDao.delete(code);
+		ShoppingGuide shoppingGuide =shopp.getById(Integer.valueOf(id));
+		shopp.delete(shoppingGuide);
 	}
 
 	/**
@@ -39,25 +36,18 @@ public class ShoppingGuideService {
 	 * 
 	 * @return
 	 */
-	public List<ShoppingGuide> select(Pageh pageh) {
-		List<ShoppingGuide> list = shoppingGuideDao.select(pageh);
-		return list;
+	public Page<ShoppingGuide> select(Pageh pageh) {
+		if(pageh.getObject1()!=null){
+			Pageable pageable =  PageRequest.of(pageh.getPageNow()-1, pageh.getPageSize());
+			Page<ShoppingGuide>	page=shopp.getByNameContainingOrderByIdDesc(pageh.getObject1(),pageable);
+			return page;
+		}else {
+			Pageable pageable =  PageRequest.of(pageh.getPageNow(), pageh.getPageSize(),new Sort(Sort.Direction.DESC,"id"));
+			Page<ShoppingGuide> page=shopp.findAll(pageable);
+			return page;
+		}
 	}
 
-	/**
-	 * 得到数据总页数
-	 */
-	public Integer gettotal(Pageh pageh) {
-		int pageCount = 0;
-		String rowCounts = shoppingGuideDao.gettotal(pageh);
-		int rowCount = Integer.parseInt(rowCounts);
-		if ((rowCount % pageh.getPageSize()) == 0) {
-			pageCount = rowCount / pageh.getPageSize();
-		} else {
-			pageCount = rowCount / pageh.getPageSize() + 1;
-		}
-		return pageCount;
-	}
 
 	/**
 	 * 得到要修改的数据
@@ -66,41 +56,43 @@ public class ShoppingGuideService {
 	 * @return
 	 */
 	public ShoppingGuide updatequery(String id) {
-		Integer code = new Integer(id);
-		ShoppingGuide shoppingGuide = shoppingGuideDao.updatequery(code);
+		ShoppingGuide shoppingGuide = shopp.getById(Integer.valueOf(id));
 		return shoppingGuide;
 	}
 
 	/**
 	 * 修改数据
-	 * 
-	 * @param id
-	 * @param meetroom
+	 *
 	 */
 	public void update(ShoppingGuide shoppingGuide) {
-		shoppingGuideDao.updateSave(shoppingGuide);
+		shopp.save(shoppingGuide);
 	}
 
 	/**
 	 * 当客服被抓去服务的时候，将在线状态改成忙线
 	 */
-	public void updatetypebusy(String code) {
-		System.out.println(code);
-		shoppingGuideDao.updatetypebusy(Integer.parseInt(code));
+	public void updatetypebusy(String id) {
+		ShoppingGuide shoppingGuide=shopp.getById(Integer.parseInt(id));
+		shoppingGuide.setType(1003);
+		shopp.save(shoppingGuide);
 	}
 
 	/**
 	 * 当客服服务完成之后，或者上线的时候将状态改为在线
 	 */
-	public void updatetypeon(String code) {
-		shoppingGuideDao.updatetypeon(Integer.parseInt(code));
+	public void updatetypeon(String id) {
+		ShoppingGuide shoppingGuide=shopp.getById(Integer.parseInt(id));
+		shoppingGuide.setType(1001);
+		shopp.save(shoppingGuide);
 	}
 
 	/**
 	 * 客服下线，将状态改为下线
 	 */
-	public void updatetypeoff(String code) {
-		shoppingGuideDao.updatetypeoff(Integer.parseInt(code));
+	public void updatetypeoff(String id) {
+		ShoppingGuide shoppingGuide=shopp.getById(Integer.parseInt(id));
+		shoppingGuide.setType(1002);
+		shopp.save(shoppingGuide);
 	}
 
 	/**
@@ -109,11 +101,10 @@ public class ShoppingGuideService {
 	 */
 	public void getidupdate(String code) {
 		if(code!=null && !code.equals("")) {
-			List<ShoppingGuide> list = shoppingGuideDao.queryAll();
-			for (int i = 0; i < list.size(); i++) {
-				if(code.equals(list.get(i).getCode())) {
-					shoppingGuideDao.updatetypeon(list.get(i).getId());
-				}
+			ShoppingGuide shoppingGuide=shopp.getByCode(code);
+			if(shoppingGuide!=null){
+				shoppingGuide.setType(1001);
+				shopp.save(shoppingGuide);
 			}
 		}
 	}
@@ -124,11 +115,10 @@ public class ShoppingGuideService {
 	 */
 	public void getidupdatedown(String code) {
 		if(code!=null && !code.equals("")) {
-			List<ShoppingGuide> list = shoppingGuideDao.queryAll();
-			for (int i = 0; i < list.size(); i++) {
-				if(code.equals(list.get(i).getCode())) {
-					shoppingGuideDao.updatetypeoff(list.get(i).getId());
-				}
+			ShoppingGuide shoppingGuide=shopp.getByCode(code);
+			if(shoppingGuide!=null){
+				shoppingGuide.setType(1002);
+				shopp.save(shoppingGuide);
 			}
 		}
 	}
